--- a/FlashCardsQuizWeb/index.html
+++ b/FlashCardsQuizWeb/index.html
@@ -13,6 +13,8 @@
     <button id="submitBtn">Submit</button>
     <div id="feedback" class="feedback"></div>
     <div id="score" class="score">Score: 0</div>
+    <div id="wrong" class="wrong">Wrong: 0</div>
+    <div id="study" class="study">Study Again:</div>
   </div>
 
   <script src="script.js"></script>
